nginx/iptables/iptables.conf
# Generated by iptables-save v1.8.7 on Mon Jun 20 15:23:01 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1451:35912597]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -j DROP
COMMIT
# Completed on Mon Jun 20 15:23:01 2022
# Generated by iptables-save v1.8.7 on Mon Jun 20 15:23:01 2022
*nat
:PREROUTING ACCEPT [19:1140]
:INPUT ACCEPT [14:840]
:OUTPUT ACCEPT [10:605]
:POSTROUTING ACCEPT [14:840]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:36165
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:56463
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 36165 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 56463 -j SNAT --to-source :53
COMMIT
# Completed on Mon Jun 20 15:23:01 2022
